compiler/kernc_cli/tests/soundness/run-pass/projection/trait_object_pointer_projection_uses_explicit_assoc_binding.kn
// exit: 0

trait Base[N: usize] {
    type Out;
};

type Handle = &Base[4, Out = i64];

fn lift(value: Handle.Base[4].Out) Handle.Base[4].Out {
    return value;
}

fn main() i32 {
    return (lift(7) as i32) - 7;
}
